GOOGLE PROXIES FOR EVERYONE

--- a/20141226-internet/index.html
+++ b/20141226-internet/index.html
@@ -89,7 +89,7 @@
 // $jsonData = file_get_contents("https://script.googleusercontent.com/macros/echo?user_content_key=NFPh63W67VZMgRlGOzR2jMAyMx9XyW1JRoP6zuqPpr8FQC4TsK4LNnuN3spHH3Ee5LMSp8DPXeCLZJRVU9Ho8yN-BaHd6SvUOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TWqLFHFX8hLuo23BslZYE0XJD1yQTLpmvc4A4mu0_fDdPulE6XFXPB7WIIUegsI7a35iDyrfKhroQtn3ImUoawuSiiCLAyTfHNIjuh_ICuRU&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX");
 
 
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=NFPh63W67VZMgRlGOzR2jMAyMx9XyW1JRoP6zuqPpr8FQC4TsK4LNnuN3spHH3Ee5LMSp8DPXeCLZJRVU9Ho8yN-BaHd6SvUOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TWqLFHFX8hLuo23BslZYE0XJD1yQTLpmvc4A4mu0_fDdPulE6XFXPB7WIIUegsI7a35iDyrfKhroQtn3ImUoawuSiiCLAyTfHNIjuh_ICuRU&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoad) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=19UbRO-CAFgsvU9rnipW6v_5cQxqTrhJPHMiXvlIBm5M&sheet=mncounty_internet2014", function(error, dataLoad) {
 
 // var dataLoad = <?php echo $jsonData; ?>
 
