--- a/20150102-property/index.html
+++ b/20150102-property/index.html
@@ -56,7 +56,7 @@
 
 // $jsonData = file_get_contents("https://script.googleusercontent.com/macros/echo?user_content_key=aX5Ar9PXYVLoNBpAcKisWOhnuDkNczDqNvirNMqYZEfvdnnZuFYeAeqBCcuyoo9-COZz38QTpwfxQZ-7mhaTl5LXBemG6QVnOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TLfvdojA4DAiImwXgWbqDJ4lCVJpoYsW4u6mmdbDe-nJKBt1GJbWHivpTib5TEX_qEc_ICSNr2JYUbAeVTusKNItgU6cJmFUe&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX");
 
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=aX5Ar9PXYVLoNBpAcKisWOhnuDkNczDqNvirNMqYZEfvdnnZuFYeAeqBCcuyoo9-COZz38QTpwfxQZ-7mhaTl5LXBemG6QVnOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TLfvdojA4DAiImwXgWbqDJ4lCVJpoYsW4u6mmdbDe-nJKBt1GJbWHivpTib5TEX_qEc_ICSNr2JYUbAeVTusKNItgU6cJmFUe&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoad) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=18diow7hznyPQIhSgpz1J27vbgUagrnwE7fnHgUvju3M&sheet=values_JunSep2015", function(error, dataLoad) {
 
 // var dataLoad = <?php echo $jsonData; ?>
 
