--- a/20150412-birdflu/index.html
+++ b/20150412-birdflu/index.html
@@ -84,7 +84,7 @@
 
 //https://script.google.com/macros/s/AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu/exec?id=1JpW0sgMM4grkFjkj1UI6JF8ajmMCAwUsNzshTAp_EQk&sheet=mn_counties
 
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=LwkUnm2uRZIfW9-Iyk4PLhcitlA-ND-4ht-jWNE4UiCXy9i_YMscBu9y7ejS93RBbtukEuBoxew_GZMFvT8Gy8dM1-iQOVKoOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TRtGdCUc6RQNYKOVtpKXgWPBRW_ejoJDPpFjsbzQjAoNJs-Yo01bT_lCV933Kef1535iDyrfKhrrDKXcJbJIfQNWQ3YoVX3Fp&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, data) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1JpW0sgMM4grkFjkj1UI6JF8ajmMCAwUsNzshTAp_EQk&sheet=mn_counties", function(error, data) {
 
 var popData = data.mn_counties;
 
