--- a/20150613-greenline/index.html
+++ b/20150613-greenline/index.html
@@ -179,7 +179,7 @@ $( ".myButton" ).click(function() {
 //   d.Total15Avg = +d.Total15Avg;
 //     });
 
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=YFQKBYw4L84kl7adaq1TYJXBNN4Uzz_NKklH2ZtncZkqqH-ts8gOTQ7snzDUksQV0lkDpXHLadBLgFhOtyK2wfJcgupDbMfoOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6Tfv0G49k1zY7acJXCedsJ5llqxXBMPUct2GGl0aTEOo3-5hZiyrwzA-hjpkEftHNgbpduxq8FudgLSSmnsv9CwmE7j-oM2zeHYm4lCyG2i8Y&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, data) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1X9fPQ-FUegTf8E4HWtXeySCKzM9qtKbJs56tD2R6KRE&sheet=greenline_ridership", function(error, data) {
 
 var boardData = data.greenline_ridership;
 
