--- a/20151004-forsaken/index.html
+++ b/20151004-forsaken/index.html
@@ -111,7 +111,7 @@
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 
 <script>
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=lvligOlsAoP_76RtXpYsNdZJvl-g9RpWnScd7Tk3OJODGM3yzPbPWJSHYaUYhy95bycmBDbC6A7uML4kG4_mMIKHPVjGWXkSOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TkNKVDlkUzzGatjCbv0vUXYPAgPhZjax1Fp-df68fLfJ2WmKtJJhkHixcCzrIV0nbGetL3GQdFGud9WSYqyzEtw&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoad) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1ckBZQQ6hK9w_wWKWDhsZB21u0CGFIYt4scuE3R9ALIU&sheet=waitlist", function(error, dataLoad) {
 
 //THESE ADD THEM TO JAVASCRIPT VARIABLES WE CAN ACCESS THROUGHOUT THE DOCUMENT
 // var dataLoad = <?php echo $jsonData; ?>;
