--- a/20151206-divide/index.html
+++ b/20151206-divide/index.html
@@ -518,16 +518,16 @@
 //THESE LOAD DIFFERENT TABS OF THE GOOGLE SHEET INTO SEPERATE JSON STRINGS, USING THE ACTUAL URLS
 
 
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=IyAA37ei8WZg3bN97a_XFkCwkhmmpdDw3n6AqiGEywtmb9uTQn_0_A6PGMfTqNqk1lPDdw76PUx-qcNrYwrIADV2MAMw5PxDOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TAII-ngvhBapgn5m2jpYmuJX8hhM_lhZLQqupDWBH9vvDqMlPpvlQMPv6ttTnn03tW0Ar8EAym28BrZ6Y4W6Ze4TUFkrULxsJ&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadBreakdown) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=_wsf_5Rq5G4OYAW05C8aNAwbbYUn8NTgMxCRpc2kAIi2_OR1dtWLF_iknsrf3ELiQ5WmZmXDwwC2BUF0JWMzmkrXOxcz7KS_OJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACxcG-w52aeuTDeO79TK_9yw&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadReligion) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=Z86oIe8B9gLHmvuK45ShDNcLqk1f6uzJjPcuUqiImxN_vnxRxM--6LhUIoWbQ6OzBoEqC7EUHEbaBzjFRtcj--HXo40wUTJZOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHAC35iDyrfKhroIrv8lzh-yXWh44bWgfVWB&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadIncome) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=PBXKjJH764EXxYX-ujnBXa-3OBGntorHEx_79jvPDHH60KAS82U6P6DsaGRmtrlz6SfQhhBABSUcanQRzfwLfTLwXJLOICfUOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACvl7IGsXAM8milcZGaIdcVxu0XK1b9qtD&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadPop) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=II7LbFHTaQ8ztWj8iZgwJO2LfvsPtRPH0iHYIMMgqpqxc3XQ8CD-VFXA-UdiKPkNyouZrqm7HnBHZmihACD9K4F-dPvX1sXVOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACCybrZkpw6lv3awp-wX2GXg&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadAge) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=CEN32UFqiil8RauoscPvxsf6BAAS3eEfwxD-pgTScBQ1UuieJ-28y_ntD-yhNdx584pcdV6KS91YnIvFHE7eiC6go6LpUBnpOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHAC35iDyrfKhrqGmU-ePo1aWQ&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadMAge) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=T7QBCPPev8B6GK-U1Nzc_rHBG8SnRO-V-uvVOham4L8JChjhtzl5_4ucSZQFmoJPtcMYS-QBEtYKmB9iB_WkykECunD_LVLpOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACYdO8VyFAHGn9ftoYmAuQqLkn56t7w9_u&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadLiving) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=M7qrJDrU_ulibIKy5ww4R9ij4WOXpTSFL6DQvtTNCGCfNmXKYAW4xGr5CrHtl15CDzBcClpgSxumgWshXQPGMiLBfLW7gLP5OJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACGFMHuQvceYxOf80yLrpamA&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadEducation) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=SPPOrRQMH7HbU12OU6MRXXwbfxwV6FtUDv6JzPW_O-yFdSxC75ff7UI-BTZ9iMqTidY2r9gkpS32yhoLUBPmI7_Gqn-ebk86OJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACxcG-w52aeuQk88Dkxrp83Q&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadRace) {
-d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=xB3E3sJmVZluOyxVMqOYq4tsCaOIdirNO1ELDS24wjhOP-q4I1WaY91UnvGWXF-4zXqApZVJ7nZdhp0BaVOJQFG2nL3Gfx6WOJmA1Yb3SEsKFZqtv3DaNYcMrmhZHmUMWojr9NvTBuBLhyHCd5hHaxCoMjMSmZWLp6XAShvjQj50JtCfh4yP7n1RnEoDeOH7XqmOXgX8RYIyMAhIAtjnF9UDzNXGLr6TDjmD7O6J2BSG2CAG_cxnG0KqCpdFoMCcqnCGG0shiIGr51q8rVM2xkn3HcCJnHACEc_ICSNr2JZUyCYaz-ylXw&lib=MVcLnEUipyThKZcpmQKyqT_CoSfd4egCX", function(error, dataLoadAmend) {
+// d3.json("http://googlescript.startribune.com/?AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu/exec?id=1Ie_rGF9NjC7v-4Xk6AjapqawSSV9GCcD4bg5Ta7NrlQ&sheet=minneapolisParcels", function(error, dataLoadBreakdown) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=religion", function(error, dataLoadReligion) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=medianIncome", function(error, dataLoadIncome) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=population", function(error, dataLoadPop) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=age", function(error, dataLoadAge) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=medianAge", function(error, dataLoadMAge) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=livingCosts", function(error, dataLoadLiving) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=education", function(error, dataLoadEducation) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=race", function(error, dataLoadRace) {
+d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1xavZEiWOLzafmKIhtkl2UZTuTpGCUtxZTgsP1Hy-KZY&sheet=votes2012", function(error, dataLoadAmend) {
 
 //THESE ADD THEM TO JAVASCRIPT VARIABLES WE CAN ACCESS THROUGHOUT THE DOCUMENT
 // var dataLoadBreakdown = <?php echo $jsonDataBreakdown; ?>;
@@ -541,8 +541,7 @@ d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=xB3E3
 // var dataLoadRace = <?php echo $jsonDataRace; ?>;
 // var dataLoadAmend = <?php echo $jsonDataAmend; ?>;
 
-dataBreakdown = dataLoadBreakdown.charter_breakdown;
-
+// dataBreakdown = dataLoadBreakdown.charter_breakdown;
 
 dataReligion = dataLoadReligion.religion;
 dataIncome = dataLoadIncome.medianIncome;
@@ -1392,6 +1391,6 @@ d3.helper.tooltip = function(accessor){
 });
 });
 });
-});
+// });
 </script>
 </html>
